--- a/scripts/install
+++ b/scripts/install
@@ -37,6 +37,7 @@ ynh_script_progression --message="Adding system configurations related to $app..
 # Create a dedicated NGINX config using the conf/nginx.conf template
 ynh_add_nginx_config
 
+env_path="$PATH"
 # Create a dedicated systemd config
 ynh_add_systemd_config
 
@@ -53,12 +54,24 @@ yunohost service add $app --description="A short description of the app" --log="
 #=================================================
 # ADD A CONFIGURATION
 #=================================================
-ynh_script_progression --message="Adding a configuration file..." --weight=1
+#ynh_script_progression --message="Adding a configuration file..." --weight=1
 
-ynh_add_config --template="some_config_file" --destination="$install_dir/some_config_file"
+#ynh_add_config --template="some_config_file" --destination="$install_dir/some_config_file"
 
-chmod 400 "$install_dir/some_config_file"
-chown $app:$app "$install_dir/some_config_file"
+#chmod 400 "$install_dir/some_config_file"
+#chown $app:$app "$install_dir/some_config_file"
+
+#=================================================
+# INSTALL
+#=================================================
+ynh_script_progression --message="Installing $app..." --weight=10
+
+pushd "$install_dir"
+		ynh_use_nodejs
+		ynh_exec_warn_less ynh_exec_as $app env $ynh_node_load_PATH $ynh_npm ci
+		ynh_exec_warn_less ynh_exec_as $app env $ynh_node_load_PATH $ynh_npm run build-packages
+		ynh_exec_warn_less ynh_exec_as $app env $ynh_node_load_PATH node webapp prod
+popd
 
 #=================================================
 # GENERIC FINALIZATION
